crates/quarto-math/tests/integration/snapshots/integration__mathml__mathml__environments__aligned-three-columns_display.snap
---
source: crates/quarto-math/tests/integration/mathml.rs
expression: to_mathml(&n)
---
<math xmlns="http://www.w3.org/1998/Math/MathML" display="block"><semantics><mrow><mtable columnalign="right left right left"><mtr><mtd><mi>a</mi></mtd><mtd><mrow><mo>=</mo><mi>b</mi></mrow></mtd><mtd><mi>c</mi></mtd><mtd><mrow><mo>=</mo><mi>d</mi></mrow></mtd></mtr><mtr><mtd><mi>e</mi></mtd><mtd><mrow><mo>=</mo><mi>f</mi></mrow></mtd><mtd><mi>g</mi></mtd><mtd><mrow><mo>=</mo><mi>h</mi></mrow></mtd></mtr></mtable></mrow><annotation encoding="application/x-tex">\begin{aligned}
a &amp;= b &amp; c &amp;= d \\
e &amp;= f &amp; g &amp;= h
\end{aligned}</annotation></semantics></math>
