crates/quarto-math/tests/integration/snapshots/integration__mathml__mathml__environments__array_display.snap
---
source: crates/quarto-math/tests/integration/mathml.rs
expression: to_mathml(&n)
---
<math xmlns="http://www.w3.org/1998/Math/MathML" display="block"><semantics><mrow><mtable><mtr><mtd><mi>a</mi></mtd><mtd><mi>b</mi></mtd></mtr><mtr><mtd><mi>c</mi></mtd><mtd><mi>d</mi></mtd></mtr></mtable></mrow><annotation encoding="application/x-tex">\begin{array}{cc}
a &amp; b \\
c &amp; d
\end{array}</annotation></semantics></math>
