crates/quarto-math/tests/integration/snapshots/integration__mathml__mathml__environments__cases_display.snap
---
source: crates/quarto-math/tests/integration/mathml.rs
expression: to_mathml(&n)
---
<math xmlns="http://www.w3.org/1998/Math/MathML" display="block"><semantics><mrow><mrow><mo stretchy="true">{</mo><mtable columnalign="left"><mtr><mtd><mi>x</mi></mtd><mtd><mrow><mi>x</mi><mo>≥</mo><mn>0</mn></mrow></mtd></mtr><mtr><mtd><mrow><mo>−</mo><mi>x</mi></mrow></mtd><mtd><mrow><mi>x</mi><mo>&lt;</mo><mn>0</mn></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">\begin{cases}
x &amp; x \geq 0 \\
-x &amp; x &lt; 0
\end{cases}</annotation></semantics></math>
